Fix: #44 - Footer block gets stuck in the middle of page on smartphone

--- a/src/sass/theme/_main.scss
+++ b/src/sass/theme/_main.scss
@@ -12,8 +12,10 @@
  *         +---wt-page-content
  */
 .wt-main-wrapper {
-    flex: 1;
-    height: 100vw;
+    @include media-breakpoint-up(sm) {
+        flex: 1;
+        height: 100vw;
+    }
 
     .wt-main-container {
         margin-top: $jc-main-wrapper-spacer;
